# ISAP2

./: .gitignore  ISAP2_SPRINT_0_1.patch  README.md
isap/backend/: .dockerignore  Dockerfile  ai_settings.json  check_tables.py  pyproject.toml
isap/backend/alembic/: env.py
isap/backend/data/: demo_pmla_validation.json
isap/backend/docs/: KNOWLEDGE_GRAPH_PMLA_ADAPTER.md  PMLA_RAG_STRATEGY.md
isap/backend/scripts/: analyze_rendered_sample.py  analyze_template_tables.py  check_sectpr_baseline.py  d6_acceptance.py  find_old_data.py  find_remaining_old.py  fix_db_ownership.sql  fix_hardcoded_contacts.py  fix_headers.py  fix_headers_final.py  fix_headers_final2.py  fix_headers_run_level.py  fix_headers_xml.py  fix_last_old.py  full_render_and_pdf.py  gen_full_output.py  gen_opo_flow.py  gen_test_output.py  inspect_etalon.py  load_demo_pmla_data.py  load_scenario_matrix.py  modify_template_tables.py  modify_template_v2.py  pmla_baseline_check.py  pmla_export_qa.py  print_detection_report.py  reindex_samples.py  replace_remaining_old.py  sectpr_baseline.json  show_doc.py  test_docx_tables.py  test_full_generation.py  test_llm_models.py  test_opo_flow.py  test_pmla_v2_render.py  verify_final_render.py  verify_pilot_render.py  verify_rendered_output.py  verify_sectpr_v2.py  verify_v2_template.py  (+1 more)
isap/backend/src/: main.py
isap/backend/tests/: conftest.py  test_ai_config.py  test_cross_facility_guardrails.py  test_directories.py  test_document_download.py  test_document_review_workflow.py  test_embedding_providers.py  test_enhanced_generator.py  test_kg_rag_harness.py  (+28 more)
(+521 files in other folders)
