[project]
name = "isap-backend"
version = "0.1.0"
description = "Industrial Safety AI Platform — Backend"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # LLM
    "openai>=1.30.0",
    "httpx>=0.27.0",          # для Ollama через HTTP

    # RAG
    "chromadb>=0.5.0",
    "pymupdf>=1.24.0",        # PDF парсинг (fitz)
    "tiktoken>=0.7.0",        # подсчёт токенов

    # Document generation
    "python-docx>=1.1.0",
    "docxtpl>=0.16.0",
    "jinja2>=3.1.0",
    "fpdf2>=2.7.0",

    # Utils
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "audit_only: tests that validate schema-template alignment (schema not finalized)",
    "postgres: tests requiring a real PostgreSQL database",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
